# maybind-sdk

./: .gitignore  LICENSE  README.md
docs/openapi/: maybind-api.yaml
docs/swagger/: index.html
openapi/: maybind-api.yaml
scripts/: generate_sdk.bat  generate_sdk.sh  sync_docs.bat  validate_sdk.py
sdk/python/: README.md  pyproject.toml  setup.py  setup_quick.py  test-requirements.txt
sdk/python/examples/: example_chat.py
sdk/python/openapi_client/: __init__.py  config.py  configuration.py
sdk/python/openapi_client/api/: default_api.py
sdk/python/openapi_client/models/: __init__.py  chat_request.py
sdk/python/tests/: README.md  test_sdk_basic.py
